backend/internal/architecture/testdata/invalid/internal/modules/bad/internal/utils/grab.go
// Package utils demonstrates a forbidden grab-bag package.
package utils

// Value exists only to make the fixture parseable.
const Value = 1
